fix: fix error - remove unused import - assertThat as 순서 조정